# otawa-aarch64

./: CMakeLists.txt  README.md  aarch64.cpp  aarch64.eld  aarch64.nmp  elf_183.eld  otawa_condition.nmp  otawa_kind.nmp  otawa_ksem.nmp  otawa_multi.nmp  otawa_sem.nmp  otawa_target.nmp
nmp/: condition.nmp  control.nmp
